--- a/inventarios-angular/src/app/producto-lista/producto-lista.component.html
+++ b/inventarios-angular/src/app/producto-lista/producto-lista.component.html
@@ -1,32 +1,26 @@
 <div class="container">
     <div class="container text-center" style="margin: 30px;">
-      <h3>Sistema de inventarios</h3>
+        <h3>Sistema de inventarios</h3>
     </div>
-  
+
     <table class="table table-striped table-hover align-middle">
-      <thead class="table-dark">
-        <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Descripcion del producto</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Existencias</th>
-          <th scope="col">Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>fat</td>
-        </tr>
-      </tbody>
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Descripcion del producto</th>
+                <th scope="col">Precio</th>
+                <th scope="col">Existencias</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let producto of productos">
+                <th scope="row">{{producto.idProducto}}</th>
+                <td>{{producto.descripcion}}</td>
+                <td>{{producto.precio}}</td>
+                <td>{{producto.existencia}}</td>
+                <td></td>
+            </tr>
+        </tbody>
     </table>
-  
-  </div>
+</div>
